--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/rossja/hackerbattleship",
   "dependencies": {
+    "body-parser": "^1.10.1",
     "express": "^4.11.0"
   },
   "devDependencies": {
