--- a/web/package.json
+++ b/web/package.json
@@ -16,17 +16,27 @@
     "ctf"
   ],
   "author": "rossja",
-  "license": "GPLv3",
+  "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/rossja/hackerbattleship/issues"
   },
   "homepage": "https://github.com/rossja/hackerbattleship",
   "dependencies": {
     "body-parser": "^1.10.1",
-    "express": "^4.11.0"
+    "express": "^4.11.0",
+    "express-session": "~1.10.2",
+    "cookie-parser": "~1.3.3",
+    "passport": "~0.2.1",
+    "passport-twitter": "~1.0.2",
+    "passport-google": "~0.3.0",
+    "passport-facebook": "~1.0.3",
+    "bcryptjs": "~2.1.0"
   },
   "devDependencies": {
     "mocha": "^2.1.0",
     "supertest": "^0.15.0"
+  },
+  "directories": {
+    "test": "test"
   }
 }
