--- a/web/package.json
+++ b/web/package.json
@@ -30,7 +30,8 @@
     "passport-twitter": "~1.0.2",
     "passport-google": "~0.3.0",
     "passport-facebook": "~1.0.3",
-    "bcryptjs": "~2.1.0"
+    "bcryptjs": "~2.1.0",
+    "pg": "~4.2.0"
   },
   "devDependencies": {
     "mocha": "^2.1.0",
